--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 alembic==1.7.7
 appdirs==1.4.3
-
+# apturl==0.5.2
 asgiref==3.5.2
 backports.zoneinfo==0.2.1
 bcrypt==3.1.7
 blinker==1.4
-Brlapi==0.7.0
+# Brlapi==0.7.0
 certifi==2022.5.18.1
 chardet==3.0.4
 charset-normalizer==2.0.12
